# cri-adx-rs

./: .gitignore  Build.ps1  BuildReloadedMod.ps1  CHANGELOG.md  Cargo.toml  README.md
buildscript/riri.criadx.BuildScript/: Executor.cs  Program.cs  riri.criadx.BuildScript.sln
cri-adx/: Cargo.toml
cri-adx-globals/: Cargo.toml  build.rs
cri-adx-globals/src/: globals.rs  lib.rs
cri-adx-proc/: Cargo.toml
cri-adx-proc-impl/: Cargo.toml
cri-adx-proc-impl/src/: create_static.rs  lib.rs
cri-adx-proc/src/: lib.rs
cri-adx-reloaded/: Cargo.toml  build.rs
cri-adx-reloaded/data/: package.toml
cri-adx-reloaded/src/: hooks_common.rs  hooks_no_ryo.rs  hooks_ryo.rs  lib.rs
cri-adx/src/: acb.rs  acf.rs  atom.rs  awb.rs  category.rs  fs.rs  globals.rs  hca_mx.rs  lib.rs  player.rs  three.rs  tween.rs  voice_pool.rs
riri.criadx/: BuildLinked.ps1  Config.cs  ModConfig.json  Publish.ps1  riri.criadx.csproj  riri.criadx.sln
riri.criadx/Template/: ModBase.cs  ModContext.cs  Startup.cs
riri.criadx/Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
