[workspace]
resolver = "2"
members = [ 
    "cri-adx", 
    "cri-adx-globals", 
    "cri-adx-proc", 
    "cri-adx-proc-impl",
    "cri-adx-reloaded"
]

[workspace.package]
version = "0.1.0"
authors = [ "Rirurin" ]
categories = [ "games" ]
homepage = "https://riri.wtf"
repository = "https://github.com/rirurin/cri-adx-rs"
license-file = "LICENSE"
edition = "2021"

# Optimized Release Build, all the optimizations!!
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.

# Release Build with Debug Info
[profile.release-debug]
inherits = "release"
debug = true # Allow us to debug using LLDB

# Slow Debug, for fast iteration
[profile.slow-debug]
inherits = "release"
debug = true
lto = "thin"
# lto = false
incremental = true
codegen-units = 64

# For Rirurin: Uncomment the patches when in active development!

# [patch."https://github.com/rirurin/csbindgen"]
# csbindgen = { path = "../csbindgen/csbindgen" }

# [patch."https://github.com/rirurin/riri-mod-tools"]
# riri-mod-tools-proc = { path = "../riri-mod-tools/riri-mod-tools-proc" }
# riri-mod-tools-rt = { path = "../riri-mod-tools/riri-mod-tools-rt" }
# riri-mod-tools = { path = "../riri-mod-tools/riri-mod-tools" }