[package]
name = "cri-adx-globals"
description = "Program globals for Cri ADX Bindings"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
cri-adx = { path = "../cri-adx" }
cri-adx-proc = { path = "../cri-adx-proc" }
riri-mod-tools-proc = { version = "0.1", path = "../../riri-mod-tools/riri-mod-tools-proc" }

[build-dependencies]
cri-adx-proc-impl = { path = "../cri-adx-proc-impl" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
