[package]
name = "cri-adx-proc"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
cri-adx-proc-impl = { path = "../cri-adx-proc-impl" } 
