[package]
name = "cri-adx-reloaded"
description = "Wrapper functions for calling methods in Criware ADX Library"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
riri-mod-tools-proc = { version = "0.1", path = "../../riri-mod-tools/riri-mod-tools-proc" }
riri-mod-tools-rt = { version = "0.1", path = "../../riri-mod-tools/riri-mod-tools-rt" }

[build-dependencies]
toml = "0.8"
walkdir = "2.5"
# csbindgen = "1.8"
csbindgen = { version = "1.8", path = "../../csbindgen/csbindgen" }
riri-mod-tools = { version = "0.1", path = "../../riri-mod-tools/riri-mod-tools" }
