[package]
name = "cri-adx-reloaded"
description = "Wrapper functions for calling methods in Criware ADX Library"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
riri-mod-tools-proc = { git = "https://github.com/rirurin/riri-mod-tools" }
riri-mod-tools-rt = { git = "https://github.com/rirurin/riri-mod-tools" }

[build-dependencies]
toml = "0.8"
walkdir = "2.5"
# csbindgen = "1.8"
csbindgen = { git = "https://github.com/rirurin/csbindgen", branch = "riri-mod-tools" }
riri-mod-tools = { git = "https://github.com/rirurin/riri-mod-tools" }

[features]
use_ryo = []
default = ["use_ryo"]