[package]
name = "cri-adx"
description = "Wrapper functions for calling methods in Criware ADX Library"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.9"
glam = "0.30.0"
